Fixed the bug not showing likes on new thought

--- a/code/src/components/listthoughts.css
+++ b/code/src/components/listthoughts.css
@@ -55,7 +55,7 @@ label {
 
 @media (max-width: 1024px) {
   .thought {
-    width: 40%;
+    width: 45%;
   }
 }
 
