--- a/code/src/components/newthoughtform.css
+++ b/code/src/components/newthoughtform.css
@@ -52,7 +52,7 @@ textarea {
 
 @media (max-width: 1024px) {
   .newthought {
-    width: 40%;
+    width: 45%;
   }
 }
 
